Bug#16501: IS_USED_LOCK does not appear to work

Update User_level_lock::thread_id on acquiring an existing lock,
and reset it on lock release.