sql/item_func.cc
@@ -1972,6 +1972,7 @@ void item_user_lock_free(void)
 void item_user_lock_release(User_level_lock *ull)
 {
   ull->locked=0;
+  ull->thread_id= 0;
   if (mysql_bin_log.is_open())
   {
     char buf[256];
@@ -2170,6 +2171,7 @@ longlong Item_func_get_lock::val_int()
   {
     ull->locked=1;
     ull->thread=thd->real_id;
+    ull->thread_id= thd->thread_id;
     thd->ull=ull;
     error=0;
   }
